Added setting to restrict daydream to a usb connection type (charger or pc)

--- a/app/src/main/res/layout/dream_settings.xml
+++ b/app/src/main/res/layout/dream_settings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
 
     <TableLayout
@@ -25,7 +25,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
                 android:max="100"
-                android:minWidth="100dp"/>
+                android:minWidth="100dp" />
 
             <TextView
                 android:id="@+id/displayDimLabel"
@@ -33,11 +33,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_toStartOf="@id/displayDimBar"
-                android:text="@string/screen_brightness"/>
+                android:text="@string/screen_brightness" />
 
         </RelativeLayout>
 
-        <View style="@style/thinLine"/>
+        <View style="@style/thinLine" />
 
         <!-- Unlock on click on time -->
         <TableRow
@@ -49,22 +49,22 @@
                 style="@style/SettingsLabel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/unlock_on_time_click"/>
+                android:text="@string/unlock_on_time_click" />
 
             <Space
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_weight="1"/>
+                android:layout_weight="1" />
 
             <Switch
                 android:id="@+id/endOnTimeClickSwitch"
                 style="@style/SettingsSwitch"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content" />
 
         </TableRow>
 
-        <View style="@style/thinLine"/>
+        <View style="@style/thinLine" />
 
         <!-- Display notifications -->
         <TableRow
@@ -76,23 +76,23 @@
                 style="@style/SettingsLabel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/displayNotifications"/>
+                android:text="@string/displayNotifications" />
 
             <Space
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_weight="1"/>
+                android:layout_weight="1" />
 
             <Switch
                 android:id="@+id/displayNotificationsSwitch"
                 style="@style/SettingsSwitch"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content" />
 
 
         </TableRow>
 
-        <View style="@style/thinLine"/>
+        <View style="@style/thinLine" />
 
         <!-- Notification brightness -->
         <RelativeLayout
@@ -107,7 +107,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
                 android:max="100"
-                android:minWidth="100dp"/>
+                android:minWidth="100dp" />
 
             <TextView
                 android:id="@+id/notificationDimLabel"
@@ -115,11 +115,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_toStartOf="@id/notificationsDimBar"
-                android:text="@string/notificatoinsVisibility"/>
+                android:text="@string/notificatoinsVisibility" />
 
         </RelativeLayout>
 
-        <View style="@style/thinLine"/>
+        <View style="@style/thinLine" />
 
         <!-- Battery status -->
         <TableRow
@@ -131,24 +131,23 @@
                 style="@style/SettingsLabel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/displayBatteryStatus"/>
+                android:text="@string/displayBatteryStatus" />
 
             <Space
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_weight="1"/>
+                android:layout_weight="1" />
 
             <Switch
                 android:id="@+id/showBatteryStatusSwitch"
                 style="@style/SettingsSwitch"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content" />
 
 
         </TableRow>
 
-        <View
-            style="@style/thinLine"/>
+        <View style="@style/thinLine" />
 
         <!-- Wifi name -->
         <TableRow
@@ -161,22 +160,22 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="3dip"
-                android:text="@string/displayWifiStatus"/>
+                android:text="@string/displayWifiStatus" />
 
             <Space
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_weight="1"/>
+                android:layout_weight="1" />
 
             <Switch
                 android:id="@+id/showWifiStatusSwitch"
                 style="@style/SettingsSwitch"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content" />
 
         </TableRow>
 
-        <View style="@style/thinLine"/>
+        <View style="@style/thinLine" />
 
         <!-- Carrier name -->
         <TableRow
@@ -188,22 +187,46 @@
                 style="@style/SettingsLabel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/displayCarrierName"/>
+                android:text="@string/displayCarrierName" />
 
             <Space
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_weight="1"/>
+                android:layout_weight="1" />
 
             <Switch
                 android:id="@+id/showCarrierSwitch"
                 style="@style/SettingsSwitch"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content" />
 
         </TableRow>
 
-        <View style="@style/thinLine"/>
+        <!-- Connection Type -->
+        <TableRow
+            style="@style/SettingsEntry"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                style="@style/SettingsLabel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/connectionType" />
+
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
+
+            <Spinner
+                android:id="@+id/connectionTypeSpinner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </TableRow>
+
+        <View style="@style/thinLine" />
 
     </TableLayout>
 
