implemented setting for privacy of notification displayed

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -46,4 +46,8 @@
         <item name="android:minHeight">72dp</item>
     </style>
 
+    <style name="spinner">
+        <item name="android:backgroundTint">@drawable/spinner_background</item>
+    </style>
+
 </resources>
