--- a/app/src/main/res/layout/dream_settings.xml
+++ b/app/src/main/res/layout/dream_settings.xml
@@ -8,263 +8,319 @@
     <TableLayout
         android:id="@+id/settingsTable"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp">
+        android:layout_height="wrap_content">
 
-
-        <!-- display brightness -->
-        <RelativeLayout
-            style="@style/SettingsEntry"
+        <LinearLayout
+            style="@style/settingsGroup"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <SeekBar
-                android:id="@+id/displayDimBar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:max="100"
-                android:minWidth="100dp"/>
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:elevation="4dp"
+            android:orientation="vertical">
 
             <TextView
-                android:id="@+id/displayDimLabel"
-                style="@style/SettingsLabel"
+                style="@style/SettingsSectionLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toStartOf="@id/displayDimBar"
-                android:text="@string/screen_brightness"/>
+                android:text="@string/general"/>
 
-        </RelativeLayout>
 
-        <View style="@style/thinLine"/>
-
-        <!-- Unlock on click on time -->
-        <TableRow
-            style="@style/SettingsEntry"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                style="@style/SettingsLabel"
+            <!-- display brightness -->
+            <RelativeLayout
+                style="@style/SettingsEntry"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/unlock_on_time_click"/>
+                android:layout_height="wrap_content">
 
-            <Space
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_weight="1"/>
+                <SeekBar
+                    android:id="@+id/displayDimBar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:max="100"
+                    android:minWidth="100dp"/>
 
-            <Switch
-                android:id="@+id/endOnTimeClickSwitch"
-                style="@style/SettingsSwitch"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                <TextView
+                    android:id="@+id/displayDimLabel"
+                    style="@style/SettingsLabel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toStartOf="@id/displayDimBar"
+                    android:text="@string/screen_brightness"/>
 
-        </TableRow>
+            </RelativeLayout>
 
-        <View style="@style/thinLine"/>
+            <View style="@style/thinLine"/>
 
-        <!-- Display notifications -->
-        <TableRow
-            style="@style/SettingsEntry"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                style="@style/SettingsLabel"
+            <!-- Unlock on click on time -->
+            <TableRow
+                style="@style/SettingsEntry"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/displayNotifications"/>
+                android:layout_height="wrap_content">
 
-            <Space
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_weight="1"/>
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical">
 
-            <Switch
-                android:id="@+id/displayNotificationsSwitch"
-                style="@style/SettingsSwitch"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                    <Switch
+                        android:id="@+id/endOnTimeClickSwitch"
+                        style="@style/SettingsSwitch"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
 
-
-        </TableRow>
-
-        <View style="@style/thinLine"/>
-
-
-        <!-- Connection Type -->
-        <RelativeLayout
-            style="@style/SettingsEntry"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+                    <TextView
+                        style="@style/SettingsLabel"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/unlock_on_time_click"/>
 
 
-            <Spinner
-                android:id="@+id/notificationPrivacySpinner"
-                style="@style/spinner"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:textAlignment="textEnd"/>
+                </RelativeLayout>
 
-            <TextView
-                style="@style/SettingsLabel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_centerVertical="true"
-                android:layout_toStartOf="@id/notificationPrivacySpinner"
-                android:text="@string/notificationContent"/>
+            </TableRow>
 
+            <View style="@style/thinLine"/>
 
-        </RelativeLayout>
-
-        <View style="@style/thinLine"/>
-
-        <!-- Notification brightness -->
-        <RelativeLayout
-            style="@style/SettingsEntry"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <SeekBar
-                android:id="@+id/notificationsDimBar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:max="100"
-                android:minWidth="100dp"/>
-
-            <TextView
-                android:id="@+id/notificationDimLabel"
-                style="@style/SettingsLabel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toStartOf="@id/notificationsDimBar"
-                android:text="@string/notificatoinsVisibility"/>
-
-        </RelativeLayout>
-
-        <View style="@style/thinLine"/>
-
-        <!-- Battery status -->
-        <TableRow
-            style="@style/SettingsEntry"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                style="@style/SettingsLabel"
+            <!-- Connection Type -->
+            <RelativeLayout
+                style="@style/SettingsEntry"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/displayBatteryStatus"/>
-
-            <Space
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_weight="1"/>
-
-            <Switch
-                android:id="@+id/showBatteryStatusSwitch"
-                style="@style/SettingsSwitch"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content">
 
 
-        </TableRow>
+                <Spinner
+                    android:id="@+id/connectionTypeSpinner"
+                    style="@style/spinner"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:textAlignment="textEnd"/>
 
-        <View style="@style/thinLine"/>
+                <TextView
+                    style="@style/SettingsLabel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_centerVertical="true"
+                    android:layout_toStartOf="@id/connectionTypeSpinner"
+                    android:text="@string/connectionType"/>
 
-        <!-- Wifi name -->
-        <TableRow
-            style="@style/SettingsEntry"
+
+            </RelativeLayout>
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            style="@style/settingsGroup"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:elevation="4dp"
+            android:orientation="vertical">
 
             <TextView
-                style="@style/SettingsLabel"
+                style="@style/SettingsSectionLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/notifications"/>
+
+            <!-- Display notifications -->
+            <TableRow
+                style="@style/SettingsEntry"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="3dip"
-                android:text="@string/displayWifiStatus"/>
+                android:layout_height="wrap_content">
 
-            <Space
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_weight="1"/>
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical">
 
-            <Switch
-                android:id="@+id/showWifiStatusSwitch"
-                style="@style/SettingsSwitch"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
 
-        </TableRow>
+                    <Switch
+                        android:id="@+id/displayNotificationsSwitch"
+                        style="@style/SettingsSwitch"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
 
-        <View style="@style/thinLine"/>
+                    <TextView
+                        style="@style/SettingsLabel"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/displayNotifications"/>
+                </RelativeLayout>
 
-        <!-- Carrier name -->
-        <TableRow
-            style="@style/SettingsEntry"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
 
-            <TextView
-                style="@style/SettingsLabel"
+            </TableRow>
+
+            <View style="@style/thinLine"/>
+
+
+            <!-- Connection Type -->
+            <RelativeLayout
+                style="@style/SettingsEntry"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/displayCarrierName"/>
+                android:layout_height="wrap_content">
 
-            <Space
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_weight="1"/>
 
-            <Switch
-                android:id="@+id/showCarrierSwitch"
-                style="@style/SettingsSwitch"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                <Spinner
+                    android:id="@+id/notificationPrivacySpinner"
+                    style="@style/spinner"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:textAlignment="textEnd"/>
 
-        </TableRow>
+                <TextView
+                    style="@style/SettingsLabel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_centerVertical="true"
+                    android:layout_toStartOf="@id/notificationPrivacySpinner"
+                    android:text="@string/notificationContent"/>
 
-        <View style="@style/thinLine"/>
 
-        <!-- Connection Type -->
-        <RelativeLayout
-            style="@style/SettingsEntry"
+            </RelativeLayout>
+
+            <View style="@style/thinLine"/>
+
+            <!-- Notification brightness -->
+            <RelativeLayout
+                style="@style/SettingsEntry"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <SeekBar
+                    android:id="@+id/notificationsDimBar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:max="100"
+                    android:minWidth="100dp"/>
+
+                <TextView
+                    android:id="@+id/notificationDimLabel"
+                    style="@style/SettingsLabel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toStartOf="@id/notificationsDimBar"
+                    android:text="@string/notificatoinsVisibility"/>
+
+            </RelativeLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            style="@style/settingsGroup"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-
-            <Spinner
-                android:id="@+id/connectionTypeSpinner"
-                style="@style/spinner"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:textAlignment="textEnd"/>
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:elevation="4dp"
+            android:orientation="vertical">
 
             <TextView
-                style="@style/SettingsLabel"
+                style="@style/SettingsSectionLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_centerVertical="true"
-                android:layout_toStartOf="@id/connectionTypeSpinner"
-                android:text="@string/connectionType"/>
+                android:text="@string/devide_status"/>
+
+            <!-- Battery status -->
+            <TableRow
+                style="@style/SettingsEntry"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical">
+
+                    <Switch
+                        android:id="@+id/showBatteryStatusSwitch"
+                        style="@style/SettingsSwitch"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                    <TextView
+                        style="@style/SettingsLabel"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/displayBatteryStatus"/>
 
 
-        </RelativeLayout>
+                </RelativeLayout>
 
-        <View style="@style/thinLine"/>
+
+            </TableRow>
+
+            <View style="@style/thinLine"/>
+
+            <!-- Wifi name -->
+            <TableRow
+                style="@style/SettingsEntry"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical">
+
+                    <Switch
+                        android:id="@+id/showWifiStatusSwitch"
+                        style="@style/SettingsSwitch"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                    <TextView
+                        style="@style/SettingsLabel"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="3dip"
+                        android:text="@string/displayWifiStatus"/>
+
+
+                </RelativeLayout>
+
+            </TableRow>
+
+            <View style="@style/thinLine"/>
+
+            <!-- Carrier name -->
+            <TableRow
+                style="@style/SettingsEntry"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical">
+
+                    <Switch
+                        android:id="@+id/showCarrierSwitch"
+                        style="@style/SettingsSwitch"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                    <TextView
+                        style="@style/SettingsLabel"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/displayCarrierName"/>
+
+
+                </RelativeLayout>
+
+            </TableRow>
+
+        </LinearLayout>
+
 
     </TableLayout>
 
