--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,19 +3,28 @@
     <item name="main" type="color">#3E7F9E</item>
     <item name="alt" type="color">#2A566B</item>
     <item name="accent" type="color">#98787C</item>
-    <item name="blue" type="color">#FF33B5E5</item>
-    <item name="purple" type="color">#FFAA66CC</item>
-    <item name="green" type="color">#FF99CC00</item>
+    <item name="blue" type="color">#0000FF</item>
+    <item name="green" type="color">#008000</item>
     <item name="orange" type="color">#FFFFBB33</item>
     <item name="red" type="color">#FFFF4444</item>
     <item name="darkblue" type="color">#FF0099CC</item>
     <item name="darkpurple" type="color">#FF9933CC</item>
     <item name="darkgreen" type="color">#FF669900</item>
+    <item name="lime" type="color">#00FF00</item>
+    <item name="olive" type="color">#808000</item>
     <item name="darkorange" type="color">#FFFF8800</item>
     <item name="darkred" type="color">#FFCC0000</item>
+    <item name="yellow" type="color">#FFFF00</item>
+    <item name="purple" type="color">#800080</item>
+    <item name="maroon" type="color">#800000</item>
     <item name="white" type="color">#FFFFFF</item>
     <item name="black" type="color">#000000</item>
+    <item name="silver" type="color">#C0C0C0</item>
+    <item name="navy" type="color">#000080	</item>
     <item name="gray" type="color">#9f9f9f</item>
+    <item name="teal" type="color">#008080</item>
+    <item name="fuchsia" type="color">#FF00FF</item>
+    <item name="aqua" type="color">#00FFFF</item>
     <item name="lightGray" type="color">#f1f1f1</item>
 
 
