--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -55,6 +55,15 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="ChooseColorLabel">
+        <item name="android:textSize">16sp</item>
+        <item name="android:layout_marginBottom">8dp</item>
+        <item name="android:layout_marginTop">8dp</item>
+        <item name="android:layout_marginLeft">16dp</item>
+        <item name="android:layout_marginRight">16dp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
     <style name="SettingsSwitch">
         <item name="android:textSize">16sp</item>
         <item name="android:layout_alignParentEnd">true</item>
