added 4 more colors to choose from

--- a/app/src/main/res/drawable/color_picker_background_dark_gray.xml
+++ b/app/src/main/res/drawable/color_picker_background_dark_gray.xml
@@ -5,7 +5,7 @@
         android:color="@color/alt">
     <item>
         <shape android:shape="oval">
-            <solid android:color="@color/fuchsia"/>
+            <solid android:color="@color/darkgray"/>
         </shape>
     </item>
 </ripple>
