--- a/app/src/main/res/drawable/color_picker_background_orange.xml
+++ b/app/src/main/res/drawable/color_picker_background_orange.xml
@@ -5,7 +5,7 @@
         android:color="@color/alt">
     <item>
         <shape android:shape="oval">
-            <solid android:color="@color/fuchsia"/>
+            <solid android:color="@color/orange"/>
         </shape>
     </item>
 </ripple>
